--- a/runtime/src/assets/stylesheets/shared/_overrides-for-patternfly.less
+++ b/runtime/src/assets/stylesheets/shared/_overrides-for-patternfly.less
@@ -35,3 +35,7 @@ h5 {
   font-size: 13px;
   line-height: 15px;
 }
+.dropdown-menu {
+  max-height: 230px;
+  overflow-y: auto;
+}
