--- a/src/app/components/work-item-detail/work-item-detail.component.less
+++ b/src/app/components/work-item-detail/work-item-detail.component.less
@@ -27,9 +27,6 @@
     background-color: @color-pf-black-200;
     border-bottom: 1px solid;
     border-bottom-color: @color-pf-black-300;
-    .wi-type-icon {
-      vertical-align: text-top;
-    }
   }
   .top-bar { margin-bottom: 0; }
   .user-avatar {
@@ -72,10 +69,15 @@
     font-size: 18px;
     cursor: pointer;
   }
+  .card-pf-time-frame-filter {
+    float: right;
+    width: 160px;
+  }
   .wi-detail-title-blk {
     .detail-title {
       max-width: ~"calc(e('100% - 25px'))";
       padding-left: 2px;
+      margin-top: 0;
       font-weight: 500;
       line-height: 1.5;
       .Border(1px, solid, transparent);
@@ -87,14 +89,14 @@
     .edit-title-alignment {
       display: inline-flex;
       padding-left: 0;
+      padding-right: 0;
     }
     .detail-title-edit {
-      width: 550px;
-      height: 35px;
-      padding-left: 2px;
+      height: 27px;
+      padding-left: 5px;
       overflow: hidden;
       font-weight: 500;
-      line-height: 1.5;
+      line-height: 1.3;
       background-color: @color-pf-white;
       resize: none;
       .Border(1px, solid, @color-pf-blue-400);
@@ -109,7 +111,7 @@
     .detail-title-edit-ico {
       position: absolute;
       right: 9px;
-      top: 18px;
+      top: 5px;
       z-index: 10;
       display: none;
       cursor: pointer;
@@ -122,35 +124,31 @@
     }
     &:focus { border-color: @color-pf-blue; }
   }
-  .wi-state-btn {
-    max-width: 132px;
-    padding-top: 20px;
-    padding-bottom: 20;
-    .detail-status-dropdown { text-align: right;
-      .dropdown-icon {
+  .detail-status-dropdown {
+    text-align: right;
+    .dropdown-icon {
+      float: left;
+      margin-top: 5px;
+      margin-right: 5px;
+      font-size: 12px;
+    }
+    .dropdown-text {
+      float: left;
+      text-align: left;
+      text-transform: capitalize;
+    }
+    .caret { margin-top: 5px; }
+    .dropdown-ul {
+      top: 25px;
+      width: 132px;
+      min-width: 132px;
+      .dropdown-li {
         float: left;
-        margin-top: 5px;
-        margin-right: 5px;
-        font-size: 12px;
-      }
-      .dropdown-text {
-        float: left;
-        text-align: left;
-        text-transform: capitalize;
-      }
-      .caret { margin-top: 5px; }
-      .dropdown-ul {
-        top: 25px;
-        width: 132px;
-        min-width: 132px;
-        .dropdown-li {
+        width: 100%;
+        a {
           float: left;
           width: 100%;
-          a {
-            float: left;
-            width: 100%;
-            padding: 2px 10px;
-          }
+          padding: 2px 10px;
         }
       }
     }
