--- a/src/assets/stylesheets/shared/_overrides-for-patternfly.less
+++ b/src/assets/stylesheets/shared/_overrides-for-patternfly.less
@@ -38,3 +38,7 @@ h5 {
 .dropdown {
   a:hover { text-decoration: none; }
 }
+.dropdown-menu {
+  max-height: 230px;
+  overflow-y: auto;
+}
